@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-29T08:19:48Z",
+  "timestamp" : "2022-08-30T01:54:10Z",
   "count_outdated" : 490,
   "uniques_outdated" : 283,
-  "count" : 512,
+  "count" : 513,
   "uniques" : 297,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-08-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
